worked on mobileM scroll issue

--- a/styles.css
+++ b/styles.css
@@ -124,6 +124,10 @@ span {
   display: none;
   margin: 1rem;
 }
+
+.burgerMFixed{
+  position:fixed;
+}
 .line1,
 .line2,
 .line3 {
